update JOSS paper

--- a/JOSSpaper/paper.bib
+++ b/JOSSpaper/paper.bib
@@ -81,3 +81,25 @@
 	urldate = {2024-10-06}
 }
 
+@misc{QUDTOnto,
+	title = {QUDT},
+	url = {https://www.qudt.org/},
+	urldate = {2022-03-01}
+}
+
+@article{huertaFAIRAIInterdisciplinary2023c,
+	title = {{{FAIR}} for {{AI}}: {{An}} Interdisciplinary and International Community Building Perspective},
+	author = {Huerta, E. A. and Blaiszik, Ben and Brinson, L. Catherine and Bouchard, Kristofer E. and Diaz, Daniel and Doglioni, Caterina and Duarte, Javier M. and Emani, Murali and Foster, Ian and Fox, Geoffrey and Harris, Philip and Heinrich, Lukas and Jha, Shantenu and Katz, Daniel S. and Kindratenko, Volodymyr and Kirkpatrick, Christine R. and {Lassila-Perini}, Kati and Madduri, Ravi K. and Neubauer, Mark S. and Psomopoulos, Fotis E. and Roy, Avik and R{\"u}bel, Oliver and Zhao, Zhizhen and Zhu, Ruike},
+	year = {2023},
+	month = jul,
+	journal = {Scientific Data},
+	volume = {10},
+	number = {1},
+	pages = {487},
+	issn = {2052-4463},
+	doi = {10.1038/s41597-023-02298-6},
+	url = {https://doi.org/10.1038/s41597-023-02298-6},
+	abstract = {A foundational set of findable, accessible, interoperable, and reusable (FAIR) principles were proposed in 2016 as prerequisites for proper data management and stewardship, with the goal of enabling the reusability of scholarly data. The principles were also meant to apply to other digital assets, at a high level, and over time, the FAIR guiding principles have been re-interpreted or extended to include the software, tools, algorithms, and workflows that produce data. FAIR principles are now being adapted in the context of AI models and datasets. Here, we present the perspectives, vision, and experiences of researchers from different countries, disciplines, and backgrounds who are leading the definition and adoption of FAIR principles in their communities of practice, and discuss outcomes that may result from pursuing and incentivizing FAIR AI research. The material for this report builds on the FAIR for AI Workshop held at Argonne National Laboratory on June 7, 2022.}
+}
+
+
