--- a/JOSSpaper/paper.bib
+++ b/JOSSpaper/paper.bib
@@ -66,7 +66,7 @@
 
 @thesis{bradleyDevelopmentAutomatedFramework2025,
 	title = {Development of an {{Automated Framework}} and {{Package}} for {{Knowledge Unification Across}} the {{Materials}} and {{Data Science Domains}}},
-	author = {Bradley, Harding and Charles, Alexander},
+	author = {Bradley-Harding, Alexander},
 	year = {2025},
 	url = {https://etd.ohiolink.edu/acprod/odb_etd/r/etd/search/10?p10_accession_num=case1725567028446992&clear=10&session=4248996698418},
 	urldate = {2025-06-19},
@@ -78,20 +78,22 @@
 @misc{RDFDataCube,
 	title = {{{RDF Data Cube Vocabulary}} {\textbar} {{DCC}}},
 	url = {https://www.dcc.ac.uk/resources/metadata-standards/rdf-data-cube-vocabulary},
-	urldate = {2024-10-06}
+	urldate = {2024-10-06},
+	year = {2024}
 }
 
 @misc{QUDTOnto,
 	title = {QUDT},
 	url = {https://www.qudt.org/},
-	urldate = {2022-03-01}
+	urldate = {2022-03-01},
+	year = {2022}
 }
 
 @article{huertaFAIRAIInterdisciplinary2023c,
 	title = {{{FAIR}} for {{AI}}: {{An}} Interdisciplinary and International Community Building Perspective},
 	author = {Huerta, E. A. and Blaiszik, Ben and Brinson, L. Catherine and Bouchard, Kristofer E. and Diaz, Daniel and Doglioni, Caterina and Duarte, Javier M. and Emani, Murali and Foster, Ian and Fox, Geoffrey and Harris, Philip and Heinrich, Lukas and Jha, Shantenu and Katz, Daniel S. and Kindratenko, Volodymyr and Kirkpatrick, Christine R. and {Lassila-Perini}, Kati and Madduri, Ravi K. and Neubauer, Mark S. and Psomopoulos, Fotis E. and Roy, Avik and R{\"u}bel, Oliver and Zhao, Zhizhen and Zhu, Ruike},
 	year = {2023},
-	month = jul,
+	month = {July},
 	journal = {Scientific Data},
 	volume = {10},
 	number = {1},
