--- a/JOSSpaper/paper.bib
+++ b/JOSSpaper/paper.bib
@@ -104,25 +104,101 @@
 	abstract = {A foundational set of findable, accessible, interoperable, and reusable (FAIR) principles were proposed in 2016 as prerequisites for proper data management and stewardship, with the goal of enabling the reusability of scholarly data. The principles were also meant to apply to other digital assets, at a high level, and over time, the FAIR guiding principles have been re-interpreted or extended to include the software, tools, algorithms, and workflows that produce data. FAIR principles are now being adapted in the context of AI models and datasets. Here, we present the perspectives, vision, and experiences of researchers from different countries, disciplines, and backgrounds who are leading the definition and adoption of FAIR principles in their communities of practice, and discuss outcomes that may result from pursuing and incentivizing FAIR AI research. The material for this report builds on the FAIR for AI Workshop held at Argonne National Laboratory on June 7, 2022.}
 }
 
-@article{OzanDERNEK20252025.A.08,
-	title={A Perspective on Synchrotron Data Science},
-	author={Ozan Dernek and Redad Mehdi and Weiqi Yue and Jonah A. Bachman and Finley R. Holt and Gabriel O. Ponon and Pawan K. Tripathi and Matthew A. Willard and Frank Ernst and Roger H. French},
-	journal={Interdisciplinary Information Sciences},
-	volume={31},
-	number={1},
-	pages={83-88},
-	year={2025},
-	doi={10.4036/iis.2025.A.08}
+@article{dernekPerspectiveSynchrotronData2025,
+	title = {A {{Perspective}} on {{Synchrotron Data Science}}},
+	author = {Dernek, Ozan and Mehdi, Redad and Yue, Weiqi and Bachman, Jonah A. and Holt, Finley R. and Ponon, Gabriel O. and Tripathi, Pawan K. and Willard, Matthew A. and Ernst, Frank and French, Roger H.},
+	year = {2025},
+	journal = {Interdisciplinary Information Sciences},
+	volume = {31},
+	number = {1},
+	pages = {83--88},
+	issn = {1340-9050, 1347-6157},
+	doi = {10.4036/iis.2025.A.08},
+	url = {https://www.jstage.jst.go.jp/article/iis/31/1/31_2025.A.08/_article},
+	urldate = {2025-11-18},
+	langid = {english},
+	keywords = {FAIR,ontology,synchrotron,X-ray techniques},
+	file = {/Users/vantran/Zotero/storage/BPK4V8C8/Dernek et al. - 2025 - A Perspective on Synchrotron Data Science.pdf}
 }
 
-@article{QuynhD.TRAN20252025.A.07,
-	title={Designing Data-Centric Study Protocols Guided by FAIR Principles},
-	author={Quynh D. Tran and Erika I. Barcelos and Laura S. Bruckman},
-	journal={Interdisciplinary Information Sciences},
-	volume={31},
-	number={1},
-	pages={75-82},
-	year={2025},
-	doi={10.4036/iis.2025.A.07}
+
+@article{tranDesigningDataCentricStudy2025,
+	title = {Designing {{Data-Centric Study Protocols Guided}} by {{FAIR Principles}}},
+	author = {Tran, Quynh D. and Barcelos, Erika I. and Bruckman, Laura S.},
+	year = {2025},
+	journal = {Interdisciplinary Information Sciences},
+	volume = {31},
+	number = {1},
+	pages = {75--82},
+	issn = {1340-9050, 1347-6157},
+	doi = {10.4036/iis.2025.A.07},
+	url = {https://www.jstage.jst.go.jp/article/iis/31/1/31_2025.A.07/_article},
+	urldate = {2025-11-18},
+	abstract = {Traditional scientific investigations often have poor or non-existent metadata and data management plans, which poses many challenges for the efficiency, transparency, and reproducibility of research studies. Due to these practices, historical data are rarely leveraged in future studies, but rather are frequently forgotten on a local computer or hardware. We describe a data-driven study protocol design to overcome such challenges in research investigations and to garner the maximum value of available and existing data. A study protocol focuses on the importance and lifespan of data beyond a study where data is re-used to generate new insights. We outline management strategies to ensure that data and metadata, including historical results, are properly linked and recorded using the domain-driven ontologies and FAIR (Findable, Accessible, Interoperable, and Reusable) guiding principles.},
+	langid = {english},
+	keywords = {data management,data-centric,FAIR,Materials Science,ontologies,study protocols},
+	file = {/Users/vantran/Zotero/storage/SN7RFNVJ/Tran et al. - 2025 - Designing Data-Centric Study Protocols Guided by FAIR Principles.pdf;/Users/vantran/Zotero/storage/8IXMP8WT/en.html}
 }
+
+
+@article{hernandezDataIntegrationFramework2024,
+	title = {A Data Integration Framework of Additive Manufacturing Based on {{FAIR}} Principles},
+	author = {Hernandez, Kristen J. and Barcelos, Erika I. and Jimenez, Jayvic C. and Nihar, Arafath and Tripathi, Pawan K. and Giera, Brian and French, Roger H. and Bruckman, Laura S.},
+	year = {2024},
+	month = jul,
+	journal = {MRS Advances},
+	volume = {9},
+	number = {10},
+	pages = {844--851},
+	issn = {2059-8521},
+	doi = {10.1557/s43580-024-00874-5},
+	url = {https://doi.org/10.1557/s43580-024-00874-5},
+	urldate = {2025-01-21},
+	abstract = {Laser-powder bed fusion (L-PBF) is a popular additive manufacturing (AM) process with rich data sets coming from both in situ and ex situ sources. Data derived from multiple measurement modalities in an AM process capture unique features but often have different encoding methods; the challenge of data registration is not directly intuitive. In this work, we address the challenge of data registration between multiple modalities. Large data spaces must be organized in a machine-compatible method to maximize scientific output. FAIR (findable, accessible, interoperable, and reusable) principles are required to overcome challenges associated with data at various scales. FAIRified data enables a standardized format allowing for opportunities to generate automated extraction methods and scalability. We establish a framework that captures and integrates data from a L-PBF study such as radiography and high-speed camera video, linking these data sets cohesively allowing for future exploration.},
+	langid = {english},
+	keywords = {DE-NA0004104},
+	file = {/Users/vantran/Zotero/storage/Q9WY9YR4/Hernandez et al. - 2024 - A data integration framework of additive manufacturing based on FAIR principles.pdf}
+}
+
+@article{brinsonCommunityActionFAIR2024,
+	title = {Community Action on {{FAIR}} Data Will Fuel a Revolution in Materials Research},
+	author = {Brinson, L. Catherine and Bartolo, Laura M. and Blaiszik, Ben and Elbert, David and Foster, Ian and Strachan, Alejandro and Voorhees, Peter W.},
+	year = {2024},
+	month = jan,
+	journal = {MRS Bulletin},
+	volume = {49},
+	number = {1},
+	pages = {12--16},
+	issn = {1938-1425},
+	doi = {10.1557/s43577-023-00498-4},
+	url = {https://doi.org/10.1557/s43577-023-00498-4},
+	urldate = {2024-07-02},
+	langid = {english},
+	keywords = {Data,duplicate,FAIR,Materials Genome,Materials science,multiple_attachments_of_same_type},
+	file = {/Users/vantran/Zotero/storage/5WPTL6QZ/Brinson et al. - 2024 - Community action on FAIR data will fuel a revoluti.pdf;/Users/vantran/Zotero/storage/HKLHS3PV/Brinson et al. - 2023 - Community action on FAIR data will fuel a revoluti.pdf}
+}
+
+@article{schefflerFAIRDataEnabling2022,
+	title = {{{FAIR}} Data Enabling New Horizons for Materials Research},
+	author = {Scheffler, Matthias and Aeschlimann, Martin and Albrecht, Martin and Bereau, Tristan and Bungartz, Hans-Joachim and Felser, Claudia and Greiner, Mark and Gro{\ss}, Axel and Koch, Christoph T. and Kremer, Kurt and Nagel, Wolfgang E. and Scheidgen, Markus and W{\"o}ll, Christof and Draxl, Claudia},
+	year = {2022},
+	month = apr,
+	journal = {Nature},
+	volume = {604},
+	number = {7907},
+	pages = {635--642},
+	publisher = {Nature Publishing Group},
+	issn = {1476-4687},
+	doi = {10.1038/s41586-022-04501-x},
+	url = {https://www.nature.com/articles/s41586-022-04501-x},
+	urldate = {2024-08-30},
+	abstract = {The prosperity and lifestyle of our society are very much governed by achievements in condensed matter physics, chemistry and materials science, because new products for sectors such as energy, the~environment, health, mobility and information technology (IT) rely largely~on improved or even new materials. Examples include solid-state lighting, touchscreens, batteries, implants, drug delivery and many more. The enormous amount of research data produced every day in these fields represents a gold mine of the twenty-first century. This gold mine is, however, of little value if these data are not comprehensively characterized and made available. How can we refine this feedstock; that is, turn data into knowledge and value? For this, a FAIR (findable, accessible, interoperable and reusable) data infrastructure is a must. Only then can data be readily shared and explored using data analytics and artificial intelligence (AI) methods. Making data 'findable and AI ready' (a forward-looking interpretation of the acronym) will change the way in which science is carried out today. In this Perspective, we discuss how we can~prepare to make this happen for the field of materials science.},
+	copyright = {2022 Springer Nature Limited},
+	langid = {english},
+	keywords = {Materials science},
+	file = {/Users/vantran/Zotero/storage/MY45DW9I/Scheffler et al. - 2022 - FAIR data enabling new horizons for materials research.pdf}
+}
+
+
+
 
